--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br /><br />
     <div id="pets">
       <div class="card">
-        <img src="asset/dog.jpg" alt="jerry" />
+        <img src="dog.jpg" alt="jerry" />
         <h3>Meet Jerry</h3>
         <p>
           Jerry is a charming and friendly dog with a heart of gold, and he is
@@ -28,7 +28,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="asset/cat.jpg" alt="tom" />
+        <img src="cat.jpg" alt="tom" />
         <h3>Meet Tom</h3>
         <p>
           Tom is a handsome and affectionate cat who is looking for his forever
@@ -43,7 +43,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="asset/hippo.jpg" alt="hippo" />
+        <img src="hippo.jpg" alt="hippo" />
         <h3>Meet Hippo</h3>
         <p>
           
@@ -56,14 +56,14 @@ Hank is a gentle and lovable hippo with a heart full of affection,
         </p>
       </div>
       <div class="card">
-        <img src="asset/yak.jpg" alt="yak" class="yak"/>
+        <img src="yak.jpg" alt="yak" class="yak"/>
         <h3>Meet Yak</h3>
         <p>
           Yara is a magnificent yak with a calm and steady presence, eagerly waiting to find a loving home. She has thick, luxurious fur that provides warmth in any season, and her strong, sturdy frame shows her resilience and strength. With her gentle eyes and peaceful demeanor, Yara is the ideal companion for someone seeking a quiet yet powerful presence in their life. Adopting Yara means embracing a life of tranquility and connection to nature. If you're ready to welcome a majestic and serene animal into your home, Yara is waiting to bring her gentle spirit into your world!
         </p>
       </div>
       <div class="card">
-        <img src="asset/Leo.jpg" alt="Leo">
+        <img src="Leo.jpg" alt="Leo">
         <h3>Meet Leo</h3>
         <p>
           Leo is a striking and graceful leopard, looking for a caring home where he can thrive. His sleek, spotted coat glistens under the sunlight, and his piercing amber eyes reflect both intelligence and mystery. Leo’s agility and strength are matched only by his curious and playful nature, making him a captivating companion. If you’re searching for a pet that embodies elegance and adventure, Leo could be the perfect addition to your family. Adopting Leo means offering a sanctuary where he can showcase his majestic beauty while sharing a bond that’s as wild as it is wonderful. Bring home this stunning leopard today, and prepare for an extraordinary journey together!
@@ -71,7 +71,7 @@ Hank is a gentle and lovable hippo with a heart full of affection,
       </div>
     
     <div class="card">
-      <img src="asset/Milo.jpg" alt="Milo">
+      <img src="Milo.jpg" alt="Milo">
       <h3>Meet Milo</h3>
       <p>        
 Milo is an adorable and curious little mouse, ready to find a cozy and loving home. With his soft fur, tiny paws, and bright, inquisitive eyes, Milo is full of energy and charm. He may be small in size, but his personality is big, and he loves to explore and play. If you're looking for a delightful and low-maintenance companion who will bring a bit of joy and wonder into your life, Milo is the perfect choice. Adopting Milo means inviting a little spark of happiness into your home, where he’ll thrive with your care and attention. Don’t miss out on making Milo a part of your family!
